[Nina] Next step adaption of  API definition.
